--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "title": "にゃっぷ",
   "description": "にゃっぷはねこちゃんの情報をなんでもマッピングできるサービスです。可愛い写真から里親の募集、迷い猫の情報などなんでも投稿してください。",
   "form_url": "",
-  "logo_image_url": "https://geoloniamaps.github.io/pwamap/icon-pwamap.svg",
+  "logo_image_url": "https://managitmana.github.io/catmap/icon.jpg",
   "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
   "primary_color": "#36e4f7",
   "orderby": "distance"
