--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
   "description": "にゃっぷはねこちゃんの情報をなんでもマッピングできるサービスです。可愛い写真から里親の募集、迷い猫の情報などなんでも投稿してください。",
   "form_url": "",
   "logo_image_url": "https://managitmana.github.io/catmap/icon.jpg",
-  "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
+  "background_image_url": "https://managitmana.github.io/catmap/background.jpg",
   "primary_color": "#36e4f7",
   "orderby": "distance"
 }
