スプレッドシートのデータを更新

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "title": "にゃっぷ",
-  "description": "にゃっぷはねこちゃんの情報をなんでもマッピングできるサービスです。可愛い写真から里親の募集、迷い猫の情報などなんでも投稿してください。",
+  "description": "にゃっぷはねこちゃんの情報をなんでもマッピングできるサービスです。可愛い写真から里親の募集、迷い猫の情報などにゃんでも投稿してください。",
   "form_url": "",
   "logo_image_url": "https://managitmana.github.io/catmap/icon.jpg",
   "background_image_url": "https://managitmana.github.io/catmap/background.jpg",
