--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron:  '*/60 * * * *'
-    # 1時間ごとに実行
+    - cron:  '0 */2 * * *'
+    # 2時間ごとに実行
 
 jobs:
   ubuntu:
